dysha-jobs back-end first version -40%, frontend 50% done